app/assets/stylesheets/site.css
body {
  font: 18.5px Palatino, 'Palatino Linotype', Helvetica, Arial, Verdana,
    sans-serif;
  text-align: justify;
}

#header {
  font-family: Lato;
  font-size: 40px;
  font-weight: bold;
}

#navigation {
  padding-top: 20px;
}

h1 {
  font-family: Lato;
  font-size: 30px;
  margin-bottom: 20px;
}

.site {
  padding: 20px;
  line-height: 1.8em;
}

.table {
  font-size: 12px;
}

tfoot input {
  width: 100%;
  padding: 3px;
  box-sizing: border-box;
}

.loadable {
  display: none;
}

td div {
  height: 68px;
  overflow: scroll;
  text-overflow: ellipsis;
}

td div.long-text {
  max-width: 700px
}

